jetty/kubernetes/nomulus-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nomulus
  labels:
    app: nomulus
spec:
  selector:
    matchLabels:
      app: nomulus
  template:
    metadata:
      labels:
        app: nomulus
    spec:
      serviceAccountName: nomulus
      containers:
      - name: nomulus
        image: gcr.io/GCP_PROJECT/nomulus
        ports:
        - containerPort: 8080
          name: http
        resources:
          requests:
            cpu: "500m"
        args: [ENVIRONMENT]
      - name: proxy
        image: gcr.io/GCP_PROJECT/proxy
        ports:
        - containerPort: 30001
          name: whois
        - containerPort: 30002
          name: epp
        resources:
          requests:
            cpu: "500m"
        args: [--env, ENVIRONMENT, --log, --local]
