jetty/kubernetes/nomulus-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  annotations:
    tag: "latest"
spec:
  selector:
    matchLabels:
      service: backend
  template:
    metadata:
      labels:
        service: backend
        traffic: backend-all
    spec:
      serviceAccountName: nomulus
      nodeSelector:
        cloud.google.com/machine-family: c4
      containers:
      - name: backend
        image: gcr.io/GCP_PROJECT/nomulus
        ports:
        - containerPort: 8080
          name: http
        resources:
          requests:
            # explicit pod-slots 0 is required in order to downgrade node
            # class from performance, which has implicit pod-slots 1
            cloud.google.com/pod-slots: 0
            cpu: "500m"
            memory: "1Gi"
          limits:
            # explicit pod-slots 0 is required in order to downgrade node
            # class from performance, which has implicit pod-slots 1
            cloud.google.com/pod-slots: 0
            cpu: "1000m"
            memory: "1.5Gi"
        args: [ENVIRONMENT]
---
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    traffic: backend-all
  ports:
    - port: 80
      targetPort: http
      name: http
