jetty/kubernetes/nomulus-console.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: console
  annotations:
    tag: "latest"
spec:
  selector:
    matchLabels:
      service: console
  template:
    metadata:
      labels:
        service: console
        traffic: console-all
    spec:
      serviceAccountName: nomulus
      containers:
      - name: console
        image: gcr.io/GCP_PROJECT/nomulus
        ports:
        - containerPort: 8080
          name: http
        startupProbe:
          httpGet:
            port: 8080
            path: /ready/console
          initialDelaySeconds: 1
          timeoutSeconds: 60
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 30
        resources:
          requests:
            # explicit pod-slots 0 is required in order to downgrade node 
            # class from performance, which has implicit pod-slots 1
            cloud.google.com/pod-slots: 0
            cpu: "100m"
            memory: "1Gi"
          limits:
            # explicit pod-slots 0 is required in order to downgrade node 
            # class from performance, which has implicit pod-slots 1
            cloud.google.com/pod-slots: 0
            cpu: "500m"
            memory: "2Gi"
        args: [ENVIRONMENT]
---
apiVersion: v1
kind: Service
metadata:
  name: console
spec:
  selector:
    traffic: console-all
  ports:
    - port: 80
      targetPort: http
      name: http
