jetty/kubernetes/nomulus-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  annotations:
    tag: "latest"
spec:
  selector:
    matchLabels:
      service: frontend
  template:
    metadata:
      labels:
        service: frontend
        traffic: frontend-all
    spec:
      serviceAccountName: nomulus
      nodeSelector:
        cloud.google.com/machine-family: c4
      containers:
      - name: frontend
        image: gcr.io/GCP_PROJECT/nomulus
        ports:
        - containerPort: 8080
          name: http
        resources:
          requests:
            # explicit pod-slots 0 is required in order to downgrade node
            # class from performance, which has implicit pod-slots 1
            cloud.google.com/pod-slots: 0
            cpu: "600m"
            memory: "2.3Gi"
          limits:
            # explicit pod-slots 0 is required in order to downgrade node
            # class from performance, which has implicit pod-slots 1
            cloud.google.com/pod-slots: 0
            cpu: "1000m"
            memory: "4Gi"
        args: [ENVIRONMENT]
      - name: EPP
        image: gcr.io/GCP_PROJECT/proxy
        ports:
        - containerPort: 30002
          name: epp
        resources:
          requests:
            # explicit pod-slots 0 is required in order to downgrade node
            # class from performance, which has implicit pod-slots 1
            cloud.google.com/pod-slots: 0
            cpu: "600m"
            memory: "700Mi"
          limits:
            # explicit pod-slots 0 is required in order to downgrade node
            # class from performance, which has implicit pod-slots 1
            cloud.google.com/pod-slots: 0
            cpu: "1000m"
            memory: "2Gi"
        args: [--env, PROXY_ENV, --log, --local]
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    traffic: frontend-all
  ports:
    - port: 80
      targetPort: http
      name: http
---
apiVersion: v1
kind: Service
metadata:
  name: EPP
  annotations:
    cloud.google.com/l4-rbs: enabled
    networking.gke.io/weighted-load-balancing: pods-per-node
    networking.gke.io/load-balancer-ip-addresses: "EPP-ipv6-main,EPP-ipv4-main"
spec:
  type: LoadBalancer
  # Traffic is directly delivered to a node, preserving the original source IP.
  externalTrafficPolicy: Local
  ipFamilies: [IPv4, IPv6]
  ipFamilyPolicy: RequireDualStack
  selector:
    traffic: frontend-all
  ports:
  - port: 700
    targetPort: epp
    name: epp
