jetty/kubernetes/nomulus-pubapi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pubapi
  annotations:
    tag: "latest"
spec:
  selector:
    matchLabels:
      service: pubapi
  template:
    metadata:
      labels:
        service: pubapi
        traffic: pubapi-all
    spec:
      serviceAccountName: nomulus
      containers:
      - name: pubapi
        image: gcr.io/GCP_PROJECT/nomulus
        ports:
        - containerPort: 8080
          name: http
        startupProbe:
          httpGet:
            port: 8080
            path: /ready/pubapi
          initialDelaySeconds: 1
          timeoutSeconds: 60
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 30
        resources:
          requests:
            # explicit pod-slots 0 is required in order to downgrade node 
            # class from performance, which has implicit pod-slots 1
            cloud.google.com/pod-slots: 0
            cpu: "500m"
            memory: "2Gi"
          limits:
            # explicit pod-slots 0 is required in order to downgrade node 
            # class from performance, which has implicit pod-slots 1
            cloud.google.com/pod-slots: 0
            cpu: "1000m"
            memory: "4Gi"
        args: [ENVIRONMENT]
---
apiVersion: v1
kind: Service
metadata:
  name: pubapi
spec:
  selector:
    traffic: pubapi-all
  ports:
  - port: 80
    targetPort: http
    name: http
