jetty/kubernetes/nomulus-gateway.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: nomulus
spec:
  gatewayClassName: gke-l7-global-external-managed-mc
  listeners:
  - name: https
    protocol: HTTPS
    port: 443
    tls:
      mode: Terminate
      options:
        networking.gke.io/pre-shared-certs: nomulus
    allowedRoutes:
      kinds:
      - kind: HTTPRoute
---
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: nomulus
  labels:
    app: nomulus
spec:
  parentRefs:
  - kind: Gateway
    name: nomulus
  rules:
  - backendRefs:
    - group: net.gke.io
      kind: ServiceImport
      name: nomulus
      port: 80
